--- a/TaskLogSystem/Views/Home/Index.cshtml
+++ b/TaskLogSystem/Views/Home/Index.cshtml
@@ -161,13 +161,13 @@ else
                 },
                 {
                     "data": "DepartmentName",
-                    "name": "Department",
+                    "name": "DepartmentName",
                     "title": "Department",
                     "autoWidth": true
                 },
                 {
                     "data": "ReportingPersonName",
-                    "name": "ReportingPerson",
+                    "name": "ReportingPersonName",
                     "title": "Reporting Person",
                     "autoWidth": true
                 },
