--- a/TaskLogSystem/Views/Shared/_EmployeesTable.cshtml
+++ b/TaskLogSystem/Views/Shared/_EmployeesTable.cshtml
@@ -8,10 +8,11 @@
     }
 }
 
-<div class="container">
+<div class="container-fluid">
     <table class="table table-bordered table-responsive" id="EmployeeTable">
         <thead>
             <tr>
+                <th></th>
                 <th>
                     Employee Code
                 </th>
